--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,23 +14,46 @@
 
       <div class="footer-col footer-col-2">
         <ul class="social-media-list">
-          {% if site.github_username %}
+
+          {% if site.youtube_channel %}
           <li>
-            {% include icon-github.html username=site.github_username %}
+            <a href="https://youtube.com/channel/{{ site.youtube_channel }}">
+              <i class="fa fa-youtube"></i>
+            </a>
           </li>
           {% endif %}
+          
+        </ul>
+      </div>
 
-          {% if site.twitter_username %}
+      <div class="footer-col footer-col-3">
+        <ul class="social-media-list">
+
+          {% if site.facebook_page %}
           <li>
-            {% include icon-twitter.html username=site.twitter_username %}
+            <a href="https://www.facebook.com/{{ site.facebook_page }}">
+              <i class="fa fa-facebook"></i>
+            </a>
+          </li>
+          {% endif %}
+          
+        </ul>
+      </div>
+
+      <div class="footer-col footer-col-4">
+        <ul class="social-media-list">
+
+          
+          {% if site.instagram_page %}
+          <li>
+            <a href="https://www.instagram.com/{{ site.instagram_page }}">
+              <i class="fa fa-instagram"></i>
+            </a>
           </li>
           {% endif %}
         </ul>
       </div>
 
-      <div class="footer-col footer-col-3">
-        <p>{{ site.description }}</p>
-      </div>
     </div>
 
   </div>
