--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,7 +39,7 @@
           {% if site.instagram_page %}
           <li>
             <a href="https://www.instagram.com/{{ site.instagram_page }}">
-              <i class="fa fa-instagram"></i>
+              <i class="fa fa-instagram"></i> Instagram
             </a>
           </li>
           {% endif %}
