--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,7 +32,7 @@
           {% if site.instagram_page %}
           <li>
             <a href="https://www.instagram.com/{{ site.instagram_page }}">
-              <i class="fa fa-instagram"></i> Instagram
+              <i class="fa fa-instagram"></i>
             </a>
           </li>
           {% endif %}
