--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
 
           {% if site.youtube_channel %}
           <li>
-            <a href="https://youtube.com/channel/{{ site.youtube_channel }}">
+            <a href="https://youtube.com/user/{{ site.youtube_channel }}">
               <i class="fa fa-youtube"></i>
             </a>
           </li>
