--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,40 +13,24 @@
       </div>
 
       <div class="footer-col footer-col-2">
+          {% if site.youtube_channel %}
           <a href="https://youtube.com/user/{{ site.youtube_channel }}">
             <i class="fa fa-youtube"></i>
           </a>
+          {% endif %}
+          &nbsp;&nbsp;&nbsp;
+          {% if site.instagram_page %}
           <a href="https://www.instagram.com/{{ site.instagram_page }}">
             <i class="fa fa-instagram"></i>
           </a>
+          {% endif %}
+          &nbsp;&nbsp;&nbsp;
+          {% if site.facebook_page %}
           <a href="https://www.facebook.com/{{ site.facebook_page }}">
             <i class="fa fa-facebook"></i>
           </a>
-        <ul class="social-media-list">
-
-          {% if site.youtube_channel %}
-          <li>
-            <a href="https://youtube.com/user/{{ site.youtube_channel }}">
-              <i class="fa fa-youtube"></i>
-            </a>
-          </li>
           {% endif %}
-          {% if site.instagram_page %}
-          <li>
-            <a href="https://www.instagram.com/{{ site.instagram_page }}">
-              <i class="fa fa-instagram"></i>
-            </a>
-          </li>
-          {% endif %}
-          {% if site.facebook_page %}
-          <li>
-            <a href="https://www.facebook.com/{{ site.facebook_page }}">
-              <i class="fa fa-facebook"></i>
-            </a>
-          </li>
-          {% endif %}
-          
-        </ul>
+        
       </div>
 
     </div>
